Add models parameter and assert
Signed-off-by: lisrte <laurent.issertial@rte-france.com>